--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,15 @@
 {
-  "env": {
-    "es2021": true,
-    "node": true
-  },
-  "extends": ["standard"],
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "rules": {
-    "semi": [2, "always"],
-    "no-console": "error"
-  }
+    "env": {
+        "es2021": true,
+        "node": true
+    },
+    "extends": [
+        "airbnb-base"
+    ],
+    "parserOptions": {
+        "ecmaVersion": 12,
+        "sourceType": "module"
+    },
+    "rules": {
+    }
 }
