--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "test:e2e": "cucumber-js --publish-quiet --require-module @babel/register",
     "serve": "npm run build && node dist/index.js",
     "build": "rimraf dist/ && babel src -d dist",
     "watch": "nodemon -w src -w index --exec npm run serve",
-    "lint": "eslint src",
-    "fix": "eslint src --fix",
+    "lint": "eslint",
+    "fix": "eslint --fix",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -27,8 +28,9 @@
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
     "@babel/register": "^7.17.0",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
+    "@cucumber/cucumber": "^7.3.2",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
