--- a/features/steps/.eslintrc.json
+++ b/features/steps/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "rules": {
     "func-names": "off",
-    "prefer-arrow-callback": "off"
+    "prefer-arrow-callback": "off",
+    "import/no-extraneous-dependencies": "off"
   }
 }
