--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test:e2e": "cucumber-js --publish-quiet --require-module @babel/register",
-    "serve": "npm run build && node dist/index.js",
+    "test:e2e": "dotenv -e .env cucumber-js -- --require-module @babel/register",
+    "serve": "npm run build && node  -r dotenv/config dist/index.js",
     "build": "rimraf dist/ && babel src -d dist",
     "watch": "nodemon -w src -w index --exec npm run serve",
-    "lint": "eslint",
+    "lint": "eslint .",
     "fix": "eslint --fix",
     "prepare": "husky install"
   },
@@ -20,6 +20,7 @@
     "node": "16.13.2"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.2"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/register": "^7.17.0",
     "@cucumber/cucumber": "^7.3.2",
+    "dotenv-cli": "^4.1.1",
     "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
@@ -36,6 +38,7 @@
     "eslint-plugin-promise": "^5.2.0",
     "husky": "^7.0.0",
     "nodemon": "^2.0.15",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "superagent": "^7.1.1"
   }
 }
