--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,7 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "rules": {}
+  "rules": {
+    "comma-dangle": ["error", "never"]
+  }
 }
