more restructure and test passing for required fields when creating new user

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,8 @@
     "sourceType": "module"
   },
   "rules": {
-    "comma-dangle": ["error", "never"]
+    "comma-dangle": ["error", "never"],
+    "no-use-before-define": ["error", { "functions": false }],
+    "operator-linebreak": "off"
   }
 }
