--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:e2e": "dotenv -e .env cucumber-js -- --require-module @babel/register --publish-quiet",
     "serve": "npm run build && node  -r dotenv/config build/index.js",
-    "build": "rimraf build/ && babel src -d build",
+    "build": "rimraf build/ && babel src -d build --copy-files",
     "watch": "nodemon -w src -w index --exec npm run serve",
     "lint": "eslint .",
     "fix": "eslint --fix",
@@ -20,6 +20,7 @@
     "node": "16.13.2"
   },
   "dependencies": {
+    "ajv": "^8.10.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2"
   },
